--- a/print.html
+++ b/print.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="title-page.html">Le Chat</a></li><li class="chapter-item expanded affix "><a href="foreword.html">Foreword</a></li><li class="chapter-item expanded affix "><a href="ch00-00-introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="ch01-00-getting-started.html"><strong aria-hidden="true">1.</strong> Getting Started</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="title-page.html">Le Chat</a></li><li class="chapter-item expanded affix "><a href="foreward.html">Foreward</a></li><li class="chapter-item expanded affix "><a href="ch00-00-introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="ch01-00-getting-started.html"><strong aria-hidden="true">1.</strong> Getting Started</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -152,6 +152,14 @@
                         <h1><a class="header" href="#communication-patterns-for-natural-language-processing" id="communication-patterns-for-natural-language-processing">Communication Patterns for Natural Language Processing</a></h1>
 <p><em>by Todd Young</em></p>
 <h1><a class="header" href="#foreword" id="foreword">Foreword</a></h1>
+<p>This book is a bit of an experiment in itself. Rather than simply writing documentation
+in the form of docstrings with some extra files here and there, I thought it would be
+interesting to try to write in a longer format about my experiment process Scientific 
+publications are great too, but I thought it would be nice to have a reference for myself 
+to look back over the entire development and experiment process. Methods sections only go so far.</p>
+<p>I hope that this book can catalog my process of working with supercomputers. Supercomputing
+is not an area that is not often taught at universities, so the old hands learn a lot of 
+tricks along the way.</p>
 <h1><a class="header" href="#introduction" id="introduction">Introduction</a></h1>
 <h1><a class="header" href="#getting-started" id="getting-started">Getting Started</a></h1>
 
