deploy: 32a235fefef98aca1a3f362f927b29f4c3714c71

--- a/print.html
+++ b/print.html
@@ -154,9 +154,10 @@
 <h1><a class="header" href="#foreword" id="foreword">Foreword</a></h1>
 <p>This book is a bit of an experiment in itself. Rather than simply writing documentation
 in the form of docstrings with some extra files here and there, I thought it would be
-interesting to try to write in a longer format about my experiment process Scientific 
-publications are great too, but I thought it would be nice to have a reference for myself 
-to look back over the entire development and experiment process. Methods sections only go so far.</p>
+interesting to try to write in a longer format on how I go about things. Scientific
+publications are great, but I thought it would be nice to have a reference for myself 
+to look back over the entire development and experiment process. Methods sections only go so far,
+and there are likely a lot of steps that I will forget if I don't write them down.</p>
 <p>I hope that this book can catalog my process of working with supercomputers. Supercomputing
 is not an area that is not often taught at universities, so the old hands learn a lot of 
 tricks along the way.</p>
