--- a/foreward.html
+++ b/foreward.html
@@ -150,7 +150,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#foreword" id="foreword">Foreword</a></h1>
+                        <h1><a class="header" href="#foreward" id="foreward">Foreward</a></h1>
 <p>This book is a bit of an experiment in itself. Rather than simply writing documentation
 in the form of docstrings with some extra files here and there, I thought it would be
 interesting to try to write in a longer format on how I go about things. Scientific
