--- a/print.html
+++ b/print.html
@@ -154,7 +154,7 @@
                     <main>
                         <h1><a class="header" href="#communication-patterns-for-natural-language-processing" id="communication-patterns-for-natural-language-processing">Communication Patterns for Natural Language Processing</a></h1>
 <p><em>by Todd Young</em></p>
-<h1><a class="header" href="#foreword" id="foreword">Foreword</a></h1>
+<h1><a class="header" href="#foreward" id="foreward">Foreward</a></h1>
 <p>This book is a bit of an experiment in itself. Rather than simply writing documentation
 in the form of docstrings with some extra files here and there, I thought it would be
 interesting to try to write in a longer format on how I go about things. Scientific
